fix: logo blur cut off
Fix logo blur being cut off in the header

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -173,7 +173,6 @@ strong {
     .content-head {
         background-color: $background;
         box-shadow: 0px 7px 12px -7px #2a2a2a;
-        clip-path: inset(0px -50px -50px -50px);  // Avoid shadow blur overflowing through the top of the block
         z-index: 10;
         padding-bottom: 10px;
         margin-top: -30px;
